visualizacion de netflix terminada

--- a/login-netflix.html
+++ b/login-netflix.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://assets.nflxext.com/ffe/siteui/common/icons/nficon2016.ico"/>
     <title>Netflix Login</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./static/index.css">
 </head>
 <body>
     <div class="container">
@@ -17,7 +18,7 @@
             <form>
                 <input type="email" placeholder="Email or phone number" required />
                 <input type="password" placeholder="Password" required />
-                <button type="submit" class="login-submit-button" onclick="window.location.href='videos.html'">Sign In</button>
+                <button type="submit" class="login-submit-button" onclick="window.location.href='profiles.html'">Sign In</button>
             </form>
             <div class="help-section">
                 <a href="#">Forgot Password?</a>
