--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://assets.nflxext.com/ffe/siteui/common/icons/nficon2016.ico"/>
     <title>Netflix Register</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./static/index.css">
 </head>
 <body>
     <div class="container">
